--- a/web/WEB-INF/template/menu_tecnico.xhtml
+++ b/web/WEB-INF/template/menu_tecnico.xhtml
@@ -114,10 +114,15 @@
                     </span></li>
 
                 <li class="dropdown">               
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    <h:form>
+                        <p:poll interval="2" update="etMensajes"/>
+                        <h:panelGroup id="etMensajes">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         <span class="top-label label label-danger">#{sesionGestec.cantidadMensajes}</span> 
                         <i class="fa fa-envelope-o fa-2x contNot"></i>                      
-                    </a>                
+                    </a> 
+                    </h:panelGroup>   
+                    </h:form>            
                     <ul class="dropdown-menu dropdown-messages" style="width: 300px;left: -150px;margin-top: 15px">              
 
                         <div class="row" style="border-bottom: 1px solid #ccc;padding: 3px 0 1px 0;margin: 0">
@@ -128,46 +133,57 @@
                             </h:form>
                         </div>
                         
-                        <a href="#{request.contextPath}/faces/gestec/usuario/mensajes.xhtml" style="text-decoration: none">
-                            <div class="notMensajesVistos">
-                                <div class="notificacionMensaje">
-                                    <img src="#{request.contextPath}/resources/img/tecnico2.jpg" alt="" class="imagenNotificacion"/>
+                        <h:form>
+                            <c:forEach items="#{sesionGestec.mensajes}" var="msn">
+                            #{sesionGestec.setUltimoMensaje(msn)}
+                            <c:if test="#{sesionGestec.ultimoMensaje.usuariosidUsuario.idUsuario != sesionGestec.usuario.idUsuario}">
+                                <div class="#{sesionGestec.estiloMensaje}" style="padding: 10px;">
+
+                                    <div class="notificacionMensaje">
+                                        <p:graphicImage value="#{sesionGestec.imagenPerfil2}" class="imagenNotificacion">
+                                            <f:param name="pid2" value="#{sesionGestec.ultimoMensaje.usuariosidUsuario.idUsuario}"/>
+                                        </p:graphicImage>
+                                    </div>
+                                    <div>
+                                        <strong><span class=" label label-info">
+                                                #{sesionGestec.ultimoMensaje.usuariosidUsuario.nombreUsuario}
+                                                #{sesionGestec.ultimoMensaje.usuariosidUsuario.apellido}
+                                            </span></strong>
+                                        <br/><br/>
+                                        <h:form>
+                                            <h:commandLink style="margin-left: 10px;color: #045491"
+                                                           value="#{sesionGestec.ultimoMensaje.mensaje}"
+                                                           action="#{citasRequest.verDetalleMensaje(msn)}"/>
+                                        </h:form>
+                                        <h5 class="tiempoMensaje pull-right">#{sesionGestec.formatearFechaMensaje(sesionGestec.ultimoMensaje.fechaMensaje)}</h5>
+                                    </div>
                                 </div>
-                                <strong><span class=" label label-info">Carlos Sarmiento</span></strong>
-                                <br/><br/><h5 class="mensajeCorto">#{msjGestec.men1}</h5>
-                                <h5 class="tiempoMensaje pull-right">#{msjGestec.tiempo}</h5>
-                            </div>            
-                        </a>
-                        <div class="notMensajes">
-                            <div class="notificacionMensaje">
-                                <img src="#{request.contextPath}/resources/img/tecnico1.jpg" alt="" class="imagenNotificacion"/>
-                            </div>
-                            <div>
-                                <strong><span class=" label label-info">Carlos Sarmiento</span></strong>
-                                <br/><br/> <h5 class="mensajeCorto">#{msjGestec.men1}</h5>
-                                <h5 class="tiempoMensaje pull-right">#{msjGestec.tiempo}</h5>
-                            </div>
-                        </div>
-                        <div class="notMensajes">
-                            <div class="notificacionMensaje">
-                                <img src="#{request.contextPath}/resources/img/tecnico5.jpg" alt="" class="imagenNotificacion"/>
-                            </div>
-                            <div>
-                                <strong><span class=" label label-info">Natalia ramirez</span></strong>
-                                <br/><br/><h5 class="mensajeCorto">#{msjGestec.men1}</h5>
-                                <h5 class="tiempoMensaje pull-right">#{msjGestec.tiempo2}</h5>
-                            </div>
-                        </div>
-                        <div class="notMensajesVistos">
-                            <div class="notificacionMensaje">
-                                <img src="#{request.contextPath}/resources/img/tecnico6.jpg" alt="" class="imagenNotificacion"/>
-                            </div>
-                            <div>
-                                <strong><span class=" label label-info">Andres Camargo</span></strong>
-                                <br/><br/> <h5 class="mensajeCorto">#{msjGestec.men1}</h5>
-                                <h5 class="tiempoMensaje pull-right">#{msjGestec.tiempo3}</h5>
-                            </div>
-                        </div>            
+                            </c:if>
+
+                            <c:if test="#{sesionGestec.ultimoMensaje.usuariosidUsuario.idUsuario == sesionGestec.usuario.idUsuario}">
+                                <div class="notMensajesVistos" style="padding: 10px;">
+
+                                    <div>
+                                        <div class="row" style="margin: 0">
+                                            <div class="col-md-1">
+                                                <strong><span class=" label label-info">Yo</span>
+                                                </strong>
+                                            </div>
+                                        <h5 class="tiempoMensaje pull-right">#{sesionGestec.formatearFechaMensaje(sesionGestec.ultimoMensaje.fechaMensaje)}</h5>
+                                        </div>
+                                            <div class="col-md-12" style="padding: 0">
+                                                <h:form>
+                                                    <h:commandLink style="margin-top: 5px;margin-left: 10px;color: #045491;float: left"
+                                                                   value="#{sesionGestec.ultimoMensaje.mensaje}"
+                                                                   action="#{citasRequest.verDetalleMensaje(msn)}"/>
+                                                </h:form>
+                                            </div>
+                                    </div>
+                                </div>
+                            </c:if>
+                        </c:forEach>
+                        </h:form>
+                        
                     </ul>
                 </li> <li class="dropdown"></li>
 
