--- a/web/WEB-INF/template/template_principal.xhtml
+++ b/web/WEB-INF/template/template_principal.xhtml
@@ -13,7 +13,8 @@
 
     <h:body onload="scrollDiv();">
 
-        <div id="top">           
+        <div id="top">  
+            #{sesionGestec.setPagina(0)}
             <ui:insert name="top"> 
                 <ui:include src="/WEB-INF/template/top.xhtml"/>
             </ui:insert>
