--- a/web/WEB-INF/template/menu_cliente.xhtml
+++ b/web/WEB-INF/template/menu_cliente.xhtml
@@ -276,7 +276,7 @@
                                                 </div>
 
                                             </c:if>
-                                            <c:if test="#{nc.idNotificacion.idNotificacion!=2}">
+                                            <c:if test="#{nc.idNotificacion.idNotificacion==5}">
                                                 <div class="notMensajes" style="background: #fff">
                                                     <div class="notificacionMensaje">
                                                         <img src="#{request.contextPath}/resources/img/tecnico5.jpg" alt="" class="imagenNotificacion"/>
