--- a/web/WEB-INF/template/menu_cliente.xhtml
+++ b/web/WEB-INF/template/menu_cliente.xhtml
@@ -129,42 +129,42 @@
 
                         <c:if test="#{sesionGestec.cantidadMensajes != 0}">
                             <c:forEach items="#{sesionGestec.mensajes}" var="msn">
-                            #{sesionGestec.setUltimoMensaje(msn)}
-                            <c:if test="#{sesionGestec.ultimoMensaje.usuariosidUsuario.idUsuario != sesionGestec.usuario.idUsuario}">
-                                <div class="#{sesionGestec.estiloMensaje}" style="padding: 10px;">
+                                #{sesionGestec.setUltimoMensaje(msn)}
+                                <c:if test="#{sesionGestec.ultimoMensaje.usuariosidUsuario.idUsuario != sesionGestec.usuario.idUsuario}">
+                                    <div class="#{sesionGestec.estiloMensaje}" style="padding: 10px;">
 
-                                    <div class="notificacionMensaje">
-                                        <p:graphicImage value="#{sesionGestec.imagenPerfil2}" class="imagenNotificacion">
-                                            <f:param name="pid2" value="#{sesionGestec.ultimoMensaje.usuariosidUsuario.idUsuario}"/>
-                                        </p:graphicImage>
-                                    </div>
-                                    <div>
-                                        <strong><span class=" label label-info">
-                                                #{sesionGestec.ultimoMensaje.usuariosidUsuario.nombreUsuario}
-                                                #{sesionGestec.ultimoMensaje.usuariosidUsuario.apellido}
-                                            </span></strong>
-                                        <br/><br/>
-                                        <h:form>
-                                            <h:commandLink style="margin-left: 10px;color: #045491"
-                                                           value="#{sesionGestec.ultimoMensaje.mensaje}"
-                                                           action="#{citasRequest.verDetalleMensaje(msn)}"/>
-                                        </h:form>
-                                        <h5 class="tiempoMensaje pull-right">#{sesionGestec.formatearFechaMensaje(sesionGestec.ultimoMensaje.fechaMensaje)}</h5>
-                                    </div>
-                                </div>
-                            </c:if>
-
-                            <c:if test="#{sesionGestec.ultimoMensaje.usuariosidUsuario.idUsuario == sesionGestec.usuario.idUsuario}">
-                                <div class="notMensajesVistos" style="padding: 10px;">
-
-                                    <div>
-                                        <div class="row" style="margin: 0">
-                                            <div class="col-md-1">
-                                                <strong><span class=" label label-info">Yo</span>
-                                                </strong>
-                                            </div>
-                                        <h5 class="tiempoMensaje pull-right">#{sesionGestec.formatearFechaMensaje(sesionGestec.ultimoMensaje.fechaMensaje)}</h5>
+                                        <div class="notificacionMensaje">
+                                            <p:graphicImage value="#{sesionGestec.imagenPerfil2}" class="imagenNotificacion">
+                                                <f:param name="pid2" value="#{sesionGestec.ultimoMensaje.usuariosidUsuario.idUsuario}"/>
+                                            </p:graphicImage>
                                         </div>
+                                        <div>
+                                            <strong><span class=" label label-info">
+                                                    #{sesionGestec.ultimoMensaje.usuariosidUsuario.nombreUsuario}
+                                                    #{sesionGestec.ultimoMensaje.usuariosidUsuario.apellido}
+                                                </span></strong>
+                                            <br/><br/>
+                                            <h:form>
+                                                <h:commandLink style="margin-left: 10px;color: #045491"
+                                                               value="#{sesionGestec.ultimoMensaje.mensaje}"
+                                                               action="#{citasRequest.verDetalleMensaje(msn)}"/>
+                                            </h:form>
+                                            <h5 class="tiempoMensaje pull-right">#{sesionGestec.formatearFechaMensaje(sesionGestec.ultimoMensaje.fechaMensaje)}</h5>
+                                        </div>
+                                    </div>
+                                </c:if>
+
+                                <c:if test="#{sesionGestec.ultimoMensaje.usuariosidUsuario.idUsuario == sesionGestec.usuario.idUsuario}">
+                                    <div class="notMensajesVistos" style="padding: 10px;">
+
+                                        <div>
+                                            <div class="row" style="margin: 0">
+                                                <div class="col-md-1">
+                                                    <strong><span class=" label label-info">Yo</span>
+                                                    </strong>
+                                                </div>
+                                                <h5 class="tiempoMensaje pull-right">#{sesionGestec.formatearFechaMensaje(sesionGestec.ultimoMensaje.fechaMensaje)}</h5>
+                                            </div>
                                             <div class="col-md-12" style="padding: 0">
                                                 <h:form>
                                                     <h:commandLink style="margin-top: 5px;margin-left: 10px;color: #045491;float: left"
@@ -172,12 +172,12 @@
                                                                    action="#{citasRequest.verDetalleMensaje(msn)}"/>
                                                 </h:form>
                                             </div>
+                                        </div>
                                     </div>
-                                </div>
-                            </c:if>
-                        </c:forEach>            
+                                </c:if>
+                            </c:forEach>            
                         </c:if>
-                        
+
                         <c:if test="#{sesionGestec.cantidadMensajes==0}">
                             <center style="padding: 20px 0 5px 0">
                                 <span class="fa fa-envelope-o" style="font-size: 150px"></span>
@@ -210,20 +210,11 @@
                             </h:form>
                         </div>
 
-                        <c:if test="#{sesionGestec.cantNot != 0}">
+                        <c:if test="#{sesionGestec.notificacionesCitaUsuario.size() != 0}">
                             <c:forEach items="#{sesionGestec.notificaciones}" var="n">
                                 <c:if test="#{n.idUsuario==sesionGestec.usuario}">
                                     <c:if test="#{n.estadoNotificacion=='Visto'}">
-                                        <c:if test="#{n.idNotificacion.idNotificacion==2}">
-                                            <div class="notMensajes" style="background: #fff">
-                                                <div>
-                                                    <br/><br/><h5 class="mensajeCorto"> #{n.idNotificacion.notificacion}</h5>
-                                                    <h5 class="tiempoMensaje pull-right">#{sesionGestec.formatearFechaNotificacion(n.fechaNotificacion)}</h5>
-                                                </div>
-                                            </div>
-
-                                        </c:if>
-                                        <c:if test="#{n.idNotificacion.idNotificacion!=2}">
+                                        <c:if test="#{n.idNotificacion.idNotificacion==7}">
                                             <div class="notMensajes">
                                                 <div class="notificacionMensaje">
                                                     <img src="#{request.contextPath}/resources/img/tecnico5.jpg" alt="" class="imagenNotificacion"/>
@@ -237,16 +228,7 @@
                                         </c:if>
                                     </c:if>
                                     <c:if test="#{n.estadoNotificacion=='Enviado'}">
-                                        <c:if test="#{n.idNotificacion.idNotificacion==2}">
-                                            <div class="notMensajes" style="background: #fff">
-                                                <div>
-                                                    <br/><br/><h5 class="mensajeCorto">#{n.idNotificacion.notificacion}</h5>
-                                                    <h5 class="tiempoMensaje pull-right">#{sesionGestec.formatearFechaNotificacion(n.fechaNotificacion)}</h5>
-                                                </div>
-                                            </div>
-
-                                        </c:if>
-                                        <c:if test="#{n.idNotificacion.idNotificacion!=2}">
+                                        <c:if test="#{n.idNotificacion.idNotificacion==5}">
                                             <div class="notMensajes">
                                                 <div class="notificacionMensaje">
                                                     <img src="#{request.contextPath}/resources/img/tecnico5.jpg" alt="" class="imagenNotificacion"/>
@@ -267,69 +249,42 @@
                                 <c:if test="#{nc.idCita.solicitudIdsolicitud.direccionidDireccion.usuariosidUsuario.idUsuario == sesionGestec.usuario.idUsuario}">
                                     <c:if test="#{nc.idNotificacion.idNotificacion==7}">
                                         <c:if test="#{nc.estadoNotificacion=='Visto'}">
-                                            <c:if test="#{nc.idNotificacion.idNotificacion==2}">
-                                                <div class="notMensajes" style="background: #fff">
-                                                    <div>
-                                                        <br/><br/><h5 class="mensajeCorto"> #{nc.idNotificacion.notificacion}</h5>
-                                                        <h5 class="tiempoMensaje pull-right">#{sesionGestec.formatearFechaNotificacion(nc.fechaNotificacion)}</h5>
-                                                    </div>
+                                            <div class="notMensajes" style="background: #fff">
+                                                <div class="notificacionMensaje">
+                                                    <img src="#{request.contextPath}/resources/img/tecnico5.jpg" alt="" class="imagenNotificacion"/>
                                                 </div>
-
-                                            </c:if>
-                                            <c:if test="#{nc.idNotificacion.idNotificacion==5}">
-                                                <div class="notMensajes" style="background: #fff">
-                                                    <div class="notificacionMensaje">
-                                                        <img src="#{request.contextPath}/resources/img/tecnico5.jpg" alt="" class="imagenNotificacion"/>
-                                                    </div>
-                                                    <div>
-                                                        <strong><span class=" label label-success">#{nc.idCita.solicitudIdsolicitud.mensajeList.get(0).usuariosidUsuario.nombreUsuario}
-                                                                #{nc.idCita.solicitudIdsolicitud.mensajeList.get(0).usuariosidUsuario.apellido}</span></strong>
-                                                        <br/><br/>   <h5 class="mensajeCorto">
-                                                            <h:form>
-                                                                <h:commandLink actionListener="#{citasRequest.verDetalleNotificacion(nc.idCita,nc)}"
-                                                                               class="enlace-perfil"
-                                                                               value="#{nc.idNotificacion.notificacion}"/>
-                                                            </h:form>
-                                                        </h5>
-                                                        <h5 class="tiempoMensaje pull-right">#{sesionGestec.formatearFechaNotificacion(nc.fechaNotificacion)}</h5>
-                                                    </div>
+                                                <div>
+                                                    <strong><span class=" label label-success">#{nc.idCita.solicitudIdsolicitud.mensajeList.get(0).usuariosidUsuario.nombreUsuario}
+                                                            #{nc.idCita.solicitudIdsolicitud.mensajeList.get(0).usuariosidUsuario.apellido}</span></strong>
+                                                    <br/><br/>   <h5 class="mensajeCorto">
+                                                        <h:form>
+                                                            <h:commandLink actionListener="#{citasRequest.verDetalleNotificacion(nc.idCita,nc)}"
+                                                                           class="enlace-perfil"
+                                                                           value="#{nc.idNotificacion.notificacion}"/>
+                                                        </h:form>
+                                                    </h5>
+                                                    <h5 class="tiempoMensaje pull-right">#{sesionGestec.formatearFechaNotificacion(nc.fechaNotificacion)}</h5>
                                                 </div>
-                                            </c:if>
+                                            </div>
                                         </c:if>
                                         <c:if test="#{nc.estadoNotificacion=='Enviado'}">
-                                            <c:if test="#{nc.idNotificacion.idNotificacion==2}">
-                                                <div class="notMensajes" style="background: #ddd">
-                                                    <div>
-                                                        <br/><br/><h5 class="mensajeCorto">
-                                                            <h:form>
-                                                                <h:commandLink actionListener="#{citasRequest.verDetalleNotificacion(nc.idCita,nc)}"
-                                                                               class="enlace-perfil"
-                                                                               value="#{nc.idNotificacion.notificacion}"/>
-                                                            </h:form>
-                                                        </h5>
-                                                    </div>
+                                            <div class="notMensajes" style="background: #ddd">
+                                                <div class="notificacionMensaje">
+                                                    <img src="#{request.contextPath}/resources/img/tecnico5.jpg" alt="" class="imagenNotificacion"/>
                                                 </div>
-
-                                            </c:if>
-                                            <c:if test="#{nc.idNotificacion.idNotificacion!=2}">
-                                                <div class="notMensajes" style="background: #ddd">
-                                                    <div class="notificacionMensaje">
-                                                        <img src="#{request.contextPath}/resources/img/tecnico5.jpg" alt="" class="imagenNotificacion"/>
-                                                    </div>
-                                                    <div>
-                                                        <strong><span class=" label label-success">#{nc.idCita.solicitudIdsolicitud.direccionidDireccion.usuariosidUsuario.nombreUsuario}
-                                                                #{nc.idCita.solicitudIdsolicitud.direccionidDireccion.usuariosidUsuario.apellido}</span></strong>
-                                                        <br/><br/>   <h5 class="mensajeCorto">
-                                                            <h:form>
-                                                                <h:commandLink actionListener="#{citasRequest.verDetalleNotificacion(nc.idCita,nc)}"
-                                                                               class="enlace-perfil"
-                                                                               value="#{nc.idNotificacion.notificacion}"/>
-                                                            </h:form>
-                                                        </h5>
-                                                        <h5 class="tiempoMensaje pull-right">#{sesionGestec.formatearFechaNotificacion(nc.fechaNotificacion)}</h5>
-                                                    </div>
+                                                <div>
+                                                    <strong><span class=" label label-success">#{nc.idCita.solicitudIdsolicitud.direccionidDireccion.usuariosidUsuario.nombreUsuario}
+                                                            #{nc.idCita.solicitudIdsolicitud.direccionidDireccion.usuariosidUsuario.apellido}</span></strong>
+                                                    <br/><br/>   <h5 class="mensajeCorto">
+                                                        <h:form>
+                                                            <h:commandLink actionListener="#{citasRequest.verDetalleNotificacion(nc.idCita,nc)}"
+                                                                           class="enlace-perfil"
+                                                                           value="#{nc.idNotificacion.notificacion}"/>
+                                                        </h:form>
+                                                    </h5>
+                                                    <h5 class="tiempoMensaje pull-right">#{sesionGestec.formatearFechaNotificacion(nc.fechaNotificacion)}</h5>
                                                 </div>
-                                            </c:if>
+                                            </div>
                                         </c:if>
                                     </c:if>
                                 </c:if>
@@ -337,7 +292,7 @@
                         </c:if>
 
 
-                        <c:if test="#{sesionGestec.cantNot == 0}">
+                        <c:if test="#{sesionGestec.notificacionesCitaUsuario.size() == 0}">
                             <center style="padding: 30px 0 5px 0">
                                 <span class="fa fa-newspaper-o" style="font-size: 150px"></span>
                                 <h4>No tienes novedades</h4>
