--- a/web/WEB-INF/template/menu_admin.xhtml
+++ b/web/WEB-INF/template/menu_admin.xhtml
@@ -329,10 +329,10 @@
                                 &nbsp;#{msjGestec.servicios}
                             </li>
                         </a>
-                        <a href="">
+                        <a href="#{request.contextPath}/faces/gestec/usuario/admin_users.xhtml">
                             <span class="fa fa-group pull-left iconos-menu"></span> 
                             <li class="pull-left hidden-sm">
-                                &nbsp;#{msjGestec.tecnico}
+                                &nbsp;#{msjGestec.Usuarios}
                             </li>
                         </a>
                         <a href="#{request.contextPath}/faces/gestec/usuario/admin_msg.xhtml">
