--- a/web/WEB-INF/template/head.xhtml
+++ b/web/WEB-INF/template/head.xhtml
@@ -5,8 +5,14 @@
     xmlns="http://www.w3.org/1999/xhtml"
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+    
     <meta charset="utf-8"/>
+    <meta http-equiv="Expires" content="0"/>
+    <meta http-equiv="Last-Modified" content="0"/>
+    <meta http-equiv="Cache-Control" content="no-cache, mustrevalidate"/>
+    <meta http-equiv="Pragma" content="no-cache"/>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
+    
     <title><ui:insert name="titulo">Gestec web</ui:insert></title>
     <!-- Core CSS - Include with every page -->
 
@@ -16,7 +22,7 @@
     <link href="#{request.contextPath}/resources/plugins/bootstrap/bootstrap.css" rel="stylesheet"/>
     <link href="#{request.contextPath}/resources/css/estilos2.css" rel="stylesheet"/>
     <link href="#{request.contextPath}/resources/css/Menu-borde.css"/>
-    
+
 </ui:fragment>       
 
 
