--- a/web/WEB-INF/template/head.xhtml
+++ b/web/WEB-INF/template/head.xhtml
@@ -6,7 +6,7 @@
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     
-    <meta charset="utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="Expires" content="0"/>
     <meta http-equiv="Last-Modified" content="0"/>
     <meta http-equiv="Cache-Control" content="no-cache, mustrevalidate"/>
