--- a/web/WEB-INF/template/menu_cliente.xhtml
+++ b/web/WEB-INF/template/menu_cliente.xhtml
@@ -313,7 +313,7 @@
 
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
 
-                        <p:graphicImage value="#{fotosController.imagenPerfil}" 
+                        <p:graphicImage value="#{fotosController.imagenPerfil}" cache="false"
                                         style="height: 48px;width: 48px;padding: 5px;float: left;position: relative;top: 12px;left: 10px;border-radius: 50%;">
                             <f:param name="pid" value="#{sesionGestec.usuario.idUsuario}"/>
                         </p:graphicImage>
@@ -322,7 +322,7 @@
                         <div style="height: 70px;">
                             <div class="col-md-12" style="text-align: center">
 
-                                <p:graphicImage value="#{fotosController.imagenPerfil}" 
+                                <p:graphicImage value="#{fotosController.imagenPerfil}" cache="false"
                                                 style="height: 70px;width: 70px;margin: 0px 15px 15px 30px;float: left;position: relative;top: 12px;left: 10px;border-radius: 50%;">
                                     <f:param name="pid" value="#{sesionGestec.usuario.idUsuario}"/>
                                 </p:graphicImage>
